@@ -44,7 +44,7 @@ at90s8535).
 Instruction set avr25 is for the classic AVR core with up to 8K program memory
 space plus the MOVW instruction (MCU types: attiny13, attiny13a, attiny2313,
 attiny24, attiny44, attiny84, attiny25, attiny45, attiny85, attiny261,
-attiny461, attiny861, attiny43u, attiny48, attiny88, at86rf401).
+attiny461, attiny861, attiny87, attiny43u, attiny48, attiny88, at86rf401).
 
 Instruction set avr3 is for the classic AVR core with up to 128K program
 memory space (MCU types: at43usb355, at76c711).
@@ -53,12 +53,12 @@ Instruction set avr31 is for the classic AVR core with exactly 128K program
 memory space (MCU types: atmega103, at43usb320).
 
 Instruction set avr35 is for classic AVR core plus MOVW, CALL, and JMP
-instructions (MCU types: attiny167, at90usb82, at90usb162).
+instructions (MCU types: attiny167, attiny327, at90usb82, at90usb162).
 
 Instruction set avr4 is for the enhanced AVR core with up to 8K program
 memory space (MCU types: atmega48, atmega48p,atmega8, atmega88, atmega88p,
-atmega8515, atmega8535, atmega8hva, at90pwm1, at90pwm2, at90pwm2b,
-at90pwm3, at90pwm3b).
+atmega8515, atmega8535, atmega8hva, atmega4hvd, atmega8hvd, at90pwm1,
+at90pwm2, at90pwm2b, at90pwm3, at90pwm3b, at90pwm81).
 
 Instruction set avr5 is for the enhanced AVR core with up to 128K program
 memory space (MCU types: atmega16, atmega161, atmega162, atmega163, atmega164p,
@@ -66,12 +66,13 @@ atmega165, atmega165p, atmega168, atmega168p, atmega169, atmega169p, atmega32,
 atmega323, atmega324p, atmega325, atmega325p, atmega3250, atmega3250p,
 atmega328p, atmega329, atmega329p, atmega3290, atmega3290p, atmega406, atmega64,
 atmega640, atmega644, atmega644p, atmega645, atmega6450, atmega649, atmega6490,
-atmega16hva, at90can32, at90can64, at90pwm216, at90pwm316, atmega16u4,
-atmega32c1, atmega32m1, atmega32u4, at90usb646, at90usb647, at94k).
+atmega16hva, atmega16hvb, atmega32hvb, at90can32, at90can64, at90pwm216,
+at90pwm316, atmega32c1, atmega64c1, atmega16m1, atmega32m1, atmega64m1,
+atmega16u4, atmega32u4, atmega32u6, at90usb646, at90usb647, at94k, at90scr100).
 
 Instruction set avr51 is for the enhanced AVR core with exactly 128K program
 memory space (MCU types: atmega128, atmega1280, atmega1281, atmega1284p,
-at90can128, at90usb1286, at90usb1287).
+atmega128rfa, at90can128, at90usb1286, at90usb1287, m3000f, m3000s, m3001b).
 
 Instruction set avr6 is for the enhanced AVR core with a 3-byte PC (MCU types:
 atmega2560, atmega2561).
